# genapkbuild

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: blueprint.rs  build.rs  cli.rs  file.rs  lib.rs  main.rs  makefile.rs  tests.rs  utils.rs  zip.rs
tests/: architectures.rs  helper.rs  input.rs  naming.rs  native_libs.rs
tests/data/: armeabi-v7a.apk  multipleArch.apk  x86.apk  x86_multiple_so.apk
