[package]
name = "genandroidmk_rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
zip = "0.5.10"
regex = "1"