[package]
name = "genapkbuild"
version = "1.5.0"
readme = "README.md"
repository = "https://github.com/bensadiku/genapkbuild"
description = "A tool to generate Android APK build system files for AOSP"
documentation = "https://docs.rs/genapkbuild"
homepage = "https://github.com/bensadiku/genapkbuild"
keywords = ["aosp", "android", "apk", "rust"]
license = "MIT OR Apache-2.0"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
zip = "0.5.10"
regex = "1"